--- a/NmyBlog.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
@@ -7,6 +7,16 @@
 
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script src="~/layui/layui.js"></script>
+    <style>
+        .layui-input-block select {
+            display: block;
+            border: 1px solid #e6e6e6;
+            height: 38px;
+            line-height: 38px;
+            min-width: 100px;
+
+        }
+    </style>
 </head>
 <body>
 
