--- a/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Index.cshtml
@@ -1,38 +1,39 @@
-﻿<table class="layui-table">
-    <thead>
-        <tr>
-            <th>编号</th>
-            <th>发布时间</th>
-            <th>博客标题</th>
-            <th>所属分类</th>
-            <th>访问量</th>
-            <th>管理</th>
-        </tr> 
-    </thead>
-    <tbody>
-    <tr>
-        <td>编号</td>
-        <td>发布时间</td>
-        <td>博客标题</td>
-        <td>所属分类</td>
-        <td>访问量</td>
-        <td>管理</td>
-    </tr>
-    <tr>
-        <td>编号</td>
-        <td>发布时间</td>
-        <td>博客标题</td>
-        <td>所属分类</td>
-        <td>访问量</td>
-        <td>管理</td>
-    </tr>
-    <tr>
-        <td>编号</td>
-        <td>发布时间</td>
-        <td>博客标题</td>
-        <td>所属分类</td>
-        <td>访问量</td>
-        <td>管理</td>
-    </tr>
-    </tbody>
-</table>
+﻿@model List<NmyBlog.Model.Blog>
+
+<blockquote class="layui-elem-quote">博客管理</blockquote>
+<div style="padding: 10px">
+    <div>
+        <a class="layui-btn" href="/Adnn1n/Blog/Add">
+            <i class="layui-icon">&#xe608;</i> 添加
+        </a>
+    </div>
+
+
+    <table class="layui-table">
+        <thead>
+            <tr>
+                <th>发布时间</th>
+                <th>博客标题</th>
+                <th>所属分类</th>
+                <th>访问量</th>
+                <th>管理</th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var blog in Model)
+        {
+            <tr>
+                <td>@blog.CreateDate.ToString("yyyy-MM-dd HH:mm")</td>
+                <td>@blog.Title</td>
+                <td>@blog.CaName</td>
+                <td>@blog.VisitNum</td>
+                <td>
+                    <a href="/Adnn1n/Blog/Add/@blog.Id"><i class="layui-icon">&#xe642;</i> 编辑</a>
+                    <a href="/Adnn1n/Blog/Del/@blog.Id" onclick="return confirm('是否确认删除？')"><i class="layui-icon">&#x1006;</i> 删除</a>
+                </td>
+            </tr>
+        }
+
+        </tbody>
+    </table>
+</div>
