--- a/NmyBlog.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NmyBlog</title>
+    <title>@ViewData["Title"] - 纳米源</title>
 
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script src="~/layui/layui.js"></script>
@@ -14,7 +14,6 @@
             height: 38px;
             line-height: 38px;
             min-width: 100px;
-
         }
     </style>
 </head>
