--- a/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
@@ -6,7 +6,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>后台登录</title>
+    <title>后台登录 - 纳米源</title>
     <!-- Custom Theme files -->
     <link href="~/css/login_style.css" rel="stylesheet" />
     <!-- Custom Theme files -->
@@ -18,7 +18,7 @@
 <body>
     <div class="login">
         <div class="login-top">
-            <h1>Admin Login</h1>
+            <h1>NmyBlog Login</h1>
             <form>
                 <input type="text" value="User Id" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Id';}" />
                 <input type="password" value="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}" />
