--- a/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
                     <a><i class="icon-home"></i> <span> 博客管理 </span></a>
                     <ul class="sub-menu-list">
                         <li class="active"><a href="http://baidu.com" target="rightFrame"> 分类管理 </a></li>
-                        <li><a href="http://sina.com" target="rightFrame"> 文章管理 </a></li>
+                        <li><a href="/Adnn1n/Blog/Index" target="rightFrame"> 文章管理 </a></li>
                     </ul>
                 </li>
 
