--- a/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
@@ -24,22 +24,22 @@
     <script>
         // 计算页面的实际高度，iframe自适应会用到
         function calcPageHeight(doc) {
-            var cHeight = Math.max(doc.body.clientHeight, doc.documentElement.clientHeight)
-            var sHeight = Math.max(doc.body.scrollHeight, doc.documentElement.scrollHeight)
-            var height = Math.max(cHeight, sHeight)
-            return height
+            var cHeight = Math.max(doc.body.clientHeight, doc.documentElement.clientHeight);
+            var sHeight = Math.max(doc.body.scrollHeight, doc.documentElement.scrollHeight);
+            var height = Math.max(cHeight, sHeight);
+            return height;
         }
         //根据ID获取iframe对象
-        var ifr = document.getElementById('rightFrame')
+        var ifr = document.getElementById('rightFrame');
         ifr.onload = function () {
             //解决打开高度太高的页面后再打开高度较小页面滚动条不收缩
             ifr.style.height = '0px';
-            var iDoc = ifr.contentDocument || ifr.document
-            var height = calcPageHeight(iDoc)
-            if (height < 850) {
-                height = 850;
+            var iDoc = ifr.contentDocument || ifr.document;
+            var height = calcPageHeight(iDoc);
+            if (height < 550) {
+                height = 550;
             }
-            ifr.style.height = height + 'px'
+            ifr.style.height = height + 'px';
         }
     </script>
 
@@ -47,11 +47,8 @@
 
 <body class="sticky-header">
 
-
-    <!--Start left side Menu-->
     <div class="left-side sticky-left-side">
 
-        <!--logo-->
         <div class="logo">
             <a href="#"><img src="#" alt="" /></a>
         </div>
@@ -59,16 +56,14 @@
         <div class="logo-icon text-center">
             <a href="#"><img src="#" alt="" /></a>
         </div>
-        <!--logo-->
 
         <div class="left-side-inner">
-            <!--Sidebar nav-->
             <ul class="nav nav-pills nav-stacked custom-nav">
 
                 <li class="menu-list nav-active">
                     <a><i class="icon-home"></i> <span> 博客管理 </span></a>
                     <ul class="sub-menu-list">
-                        <li class="active"><a href="http://baidu.com" target="rightFrame"> 分类管理 </a></li>
+                        <li class="active"><a href="/Adnn1n/Home/Welcome" target="rightFrame"> 分类管理 </a></li>
                         <li><a href="/Adnn1n/Blog/Index" target="rightFrame"> 文章管理 </a></li>
                     </ul>
                 </li>
@@ -78,32 +73,26 @@
                     <a href="#"><i class="icon-lock"></i> <span> 用户管理 </span></a>
                     <ul class="sub-menu-list">
                         <li><a href="/Adnn1n/Login" target="rightFrame"> 管理员管理 </a></li>
-                        <li><a href="http://qq.com" target="rightFrame"> 权限管理 </a></li>
+                        <li><a href="/Adnn1n/Home/Welcome" target="rightFrame"> 权限管理 </a></li>
                     </ul>
                 </li>
 
             </ul>
-            <!--End sidebar nav-->
 
         </div>
     </div>
-    <!--End left side menu-->
-    <!-- main content start-->
+
     <div class="main-content">
 
-        <!-- header section start-->
         <div class="header-section">
 
             <a class="toggle-btn"><i class="fa fa-bars"></i></a>
-
             <form class="searchform">
-                <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
+                <input type="text" class="form-control" name="keyword" placeholder="请输入关键字" />
             </form>
 
-            <!--notification menu start -->
             <div class="menu-right">
                 <ul class="notification-menu">
-
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             Hugo
@@ -113,42 +102,27 @@
                             <li> <a href="/Adnn1n/Login"> <i class="fa fa-lock"></i> Logout </a> </li>
                         </ul>
                     </li>
-
                 </ul>
             </div>
-            <!--notification menu end -->
 
         </div>
-        <!-- header section end-->
-        <!--body wrapper start-->
+
         <div class="wrapper">
-
-            <iframe id="rightFrame" name="rightFrame" frameborder="0" scrolling="no" src="http://nmyuan.com" style="min-height:600px;width:100%;height:100%;"></iframe>
-
-
-
-
+            <iframe id="rightFrame" name="rightFrame" frameborder="0" scrolling="no" src="/Adnn1n/Home/Welcome" style="min-height:600px;width:100%;height:100%;"></iframe>
         </div>
-        <!-- End Wrapper-->
-        <!--Start  Footer -->
+
         <footer class="footer-main">Copyright &copy; 2019.Weqan</footer>
-        <!--End footer -->
 
     </div>
-    <!--End main content -->
-    <!--Begin core plugin -->
+
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/plugins/moment.js"></script>
     <script src="~/js/jquery.slimscroll.js "></script>
     <script src="~/js/jquery.nicescroll.js"></script>
     <script src="~/js/functions.js"></script>
-    <!-- End core plugin -->
-
-
 
 </body>
-
 </html>
 
 
