2019年3月4日 主页完成

--- a/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 }
 
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="nmyuan" />
     <meta name="description" content="nmyuan" />
