--- a/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
@@ -4,29 +4,26 @@
 }
 
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="nmyuan">
     <meta name="description" content="nmyuan">
     <meta name="author" content="weqan">
-    <link rel="icon" href="~/favicon.ico" type="image/png">
     <title>后台登录 - 纳米源</title>
+    <link rel="icon" href="~/favicon.ico" type="image/png">
 
     <link href="~/css/icons.css" rel="stylesheet">
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
 
-
 </head>
 
 <body class="sticky-header">
 
-
-    <!--Start login Section-->
     <section class="login-section">
         <div class="container">
             <div class="row">
@@ -79,12 +76,9 @@
             </div>
         </div>
     </section>
-    <!--End login Section-->
-    <!--Begin core plugin -->
+
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
-    <!-- End core plugin -->
 
 </body>
-
 </html>
