--- a/NmyBlog.Web/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Views/Home/Index.cshtml
@@ -4,8 +4,6 @@
 }
 
 <!DOCTYPE html>
-
-<!doctype html>
 <html lang="zh-CN">
 
 <head>
@@ -16,14 +14,15 @@
     <title>纳米源 - Hugo's Blog</title>
     <meta name="keywords" content="nmyuan">
     <meta name="description" content="nmyuan">
+    <meta name="author" content="weqan">
     <link rel="stylesheet" type="text/css" href="~/main/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/main/css/nprogress.css">
     <link rel="stylesheet" type="text/css" href="~/main/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/main/css/font-awesome.min.css">
 
     <link rel="apple-touch-icon-precomposed" href="~/main/images/yuan.ico">
-
     <link rel="shortcut icon" href="~/main/images/yuan.ico">
+
     <script src="~/main/js/jquery-2.1.4.min.js"></script>
     <script src="~/main/js/nprogress.js"></script>
     <script src="~/main/js/jquery.lazyload.min.js"></script>
