--- a/NmyBlog.Web/Views/Page/Index.cshtml
+++ b/NmyBlog.Web/Views/Page/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿
+@{
     Layout = null;
 }
-
-@model List<NmyBlog.Model.Blog>
+@model NmyBlog.Model.Blog
 
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -12,7 +12,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>文章列表 - 纳米源</title>
+    <title>@Model.Title - 纳米源</title>
     <meta name="keywords" content="nmyuan">
     <meta name="description" content="nmyuan">
     <meta name="author" content="weqan">
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="user-select">
+<body class="user-select single">
     <header class="header">
         <nav class="navbar navbar-default" id="navbar">
             <div class="container">
@@ -40,7 +40,10 @@
                     <ul class="site-nav topmenu">
                         <li><a href="http://weqan.cn">维千网</a></li>
                         <li>
-                            <a href="https://github.com/weqan" title="GitHub"><i class="fa fa-github"></i> 我的GitHub</a>
+                            <a href="https://github.com/weqan" title="GitHub">
+                                <i class="fa fa-github">
+                                </i> 我的GitHub
+                            </a>
                         </li>
                     </ul>
                     勤记录 懂分享
@@ -49,7 +52,10 @@
 
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar"
                             aria-expanded="false">
-                        <span class="sr-only"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                        <span class="sr-only"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
 
                     <h1 class="logo hvr-bounce-in">
@@ -82,83 +88,79 @@
     <section class="container">
         <div class="content-wrap">
             <div class="content">
-                <div id="focusslide" class="carousel slide" data-ride="carousel">
-                    <div class="title">
-                        <h3>最新发布</h3>
-                        <div class="more">
-                            @foreach (NmyBlog.Model.Category ca in ViewBag.calist)
-                            {
-                                <a href="#" title="@ca.CaName">@ca.CaName</a>
-                            }
-                        </div>
+                <header class="article-header">
+                    <h1 class="article-title"><a href="#" title="@Model.Title">@Model.Title</a></h1>
+                    <div class="article-meta">
+                        <span class="item article-meta-time"><time class="time" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="发表时间：@Model.CreateDate"><i class="glyphicon glyphicon-time"></i> @Model.CreateDate</time></span> 
+                        <span class="item article-meta-source" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="来源：纳米源博客"><i class="glyphicon glyphicon-globe"></i> 纳米源博客</span>
+                        <span class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="@Model.CaName 主题"><i class="glyphicon glyphicon-list"></i><a href="#" title="@Model.CaName 主题"> @Model.CaName 主题</a>
+                        </span>
+                        <span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="浏览量：@Model.VisitNum"><i class="glyphicon glyphicon-eye-open"></i> @Model.VisitNum</span>
                     </div>
+                </header>
+                <article class="article-content">
+                    <p>
+                        @Model.Body
+                    </p>
+                    <pre class="prettyprint lang-cs">
+代码示例：
+public static double JieCheng(int number)
+{
+	if (number == 0)
+	{
+		return 0;
+	}
+
+	//初始值必须设置为1
+	double result = 1; 
+
+	for (int i = number; i &gt;= 1; i--)
+	{
+		result = result*i;
+	}
+	return result;
+}
+					</pre>
 
 
-                    @foreach (var blog in Model)
+
+                </article>
+                <div class="article-tags">
+                    标签：
+                    @foreach (NmyBlog.Model.Category ca in ViewBag.bqlist)
                     {
-                        <!-- 1 -->
-                        <article class="excerpt excerpt-1">
-                            <a class="focus" href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">
-                                <img class="thumb"
-                                     data-original="~/main/images/nmy_main.jpg" src="~/main/images/nmy_main.jpg"
-                                     alt="@blog.Title" style="display: inline;">
-                            </a>
-                            <header>
-                                <a class="cat" href="#" title="@blog.CaName">@blog.CaName 主题<i></i></a>
-                                <h2>
-                                    <a href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">@blog.Title</a>
-                                </h2>
-                            </header>
-                            <p class="meta">
-                                <time class="time"><i class="glyphicon glyphicon-time"></i> @blog.CreateDate</time>
-                                <span class="views"><i class="glyphicon glyphicon-eye-open"></i> @blog.VisitNum</span>
-                            </p>
-                            <p class="note">
-                                @if (blog.Body.Length > 250)
-                                {
-                                    @blog.Body.Substring(0, 250)
-                                }
-                                else
-                                {
-                                    @blog.Body
-                                }
-                            </p>
-                        </article>
+                        <a href="#" rel="tag">@ca.CaName</a>
                     }
-
-
-
                 </div>
+                <div class="relates">
+                    <div class="title">
+                        <h3>相关推荐</h3>
+                    </div>
+                    <ul>
+                        @foreach (NmyBlog.Model.Blog bo in ViewBag.tjlist)
+                        {
+                            <li><a href="/Page?id=@bo.Id" title="@bo.Title">@bo.Title</a></li>
+                        }
+
+                    </ul>
+                </div>
+
+
             </div>
         </div>
 
-        <aside class="sidebar">
-            <div class="fixed">
-                <div class="widget widget_search">
-                    <form class="navbar-form" action="/Search" method="post">
-                        <div class="input-group">
-                            <input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15"
-                                   autocomplete="off">
-                            <span class="input-group-btn">
-                                <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-                            </span>
-                        </div>
-                    </form>
-                </div>
-            </div>
 
+        <aside class="sidebar">
 
             <div class="widget widget_hot">
-                <h3>大家都在看</h3>
+                <h3>最新文章</h3>
                 <ul>
-                    @foreach (NmyBlog.Model.Blog bo in ViewBag.bolist)
+                    @foreach (NmyBlog.Model.Blog bo in ViewBag.zxlist)
                     {
-                        <!-- 1 -->
                         <li>
-                            <a target="_blank" title="@bo.Title" href="/Page?id=@bo.Id">
+                            <a title="@bo.Title" href="/Page?id=@bo.Id">
                                 <span class="thumbnail">
-                                    <img class="thumb" data-original="~/main/images/nmy_main.jpg" src="~/main/images/nmy_main.jpg"
-                                         alt="@bo.Title" style="display: block;">
+                                    <img class="thumb" data-original="~/main/images/nmy_main.jpg" src="~/main/images/nmy_main.jpg" alt="@bo.Title" style="display: block;">
                                 </span>
                                 <span class="text">@bo.Title</span>
                                 <span class="muted"><i class="glyphicon glyphicon-time"></i> @bo.CreateDate</span>
@@ -166,23 +168,19 @@
                             </a>
                         </li>
                     }
-
-
+                    
                 </ul>
             </div>
 
+
         </aside>
     </section>
-
-
     <footer class="footer">
         <div class="container">
             <p>Copyright &copy; 2019.Weqan</p>
         </div>
         <div id="gotop"><a class="gotop"></a></div>
     </footer>
-
-
     <script src="~/main/js/bootstrap.min.js"></script>
     <script src="~/main/js/jquery.ias.js"></script>
     <script src="~/main/js/scripts.js"></script>
