--- a/NmyBlog.Web/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Views/Home/Index.cshtml
@@ -219,7 +219,7 @@
             <div class="widget widget_hot">
                 <h3>猜你喜欢</h3>
                 <ul>
-                    @foreach (NmyBlog.Model.Blog bo in ViewBag.bolist)
+                    @foreach (NmyBlog.Model.Blog bo in ViewBag.xhlist)
                     {
                         <li>
                             <a target="_blank" title="@bo.Title" href="/Page?id=@bo.Id">
