--- a/NmyBlog.Web/Views/List/Index.cshtml
+++ b/NmyBlog.Web/Views/List/Index.cshtml
@@ -151,7 +151,7 @@
             <div class="widget widget_hot">
                 <h3>大家都在看</h3>
                 <ul>
-                    @foreach (NmyBlog.Model.Blog bo in ViewBag.bolist)
+                    @foreach (NmyBlog.Model.Blog bo in ViewBag.djlist)
                     {
                         <!-- 1 -->
                         <li>
