2019年3月11日 标签管理

--- a/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
@@ -63,8 +63,8 @@
                 <li class="menu-list nav-active">
                     <a><i class="icon-home"></i> <span> 博客管理 </span></a>
                     <ul class="sub-menu-list">
-                        <li class="active"><a href="/Adnn1n/Home/Welcome" target="rightFrame"> 分类管理 </a></li>
-                        <li><a href="/Adnn1n/Blog/Index" target="rightFrame"> 文章管理 </a></li>
+                        <li class="active"><a href="/Adnn1n/Category" target="rightFrame"> 分类管理 </a></li>
+                        <li><a href="/Adnn1n/Blog" target="rightFrame"> 文章管理 </a></li>
                     </ul>
                 </li>
 
