--- a/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Login/Index.cshtml
@@ -32,14 +32,10 @@
 
                         <h2 class="header-title text-center">NmyBlog Login</h2>
 
-                        <form>
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Username">
-                            </div>
+                        <form method="post" action="">
+                            <div class="form-group"><input type="text" class="form-control" placeholder="Username" name="username" id="username"></div>
 
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Password">
-                            </div>
+                            <div class="form-group"><input type="password" class="form-control" placeholder="Password" name="password" id="password"></div>
 
                             <div class="form-group">
                                 <div class="pull-left">
@@ -50,7 +46,7 @@
                                 </div>
 
                                 <div class="pull-right">
-                                    <a href="reset-password.html" class="a-link">
+                                    <a href="#" class="a-link">
                                         <i class="fa fa-unlock-alt"></i> Forgot password?
                                     </a>
                                 </div>
@@ -61,7 +57,7 @@
                             </div>
 
                             <div class="form-group text-center">
-                                Don't have an account?  <a href="registration.html">Sign Up </a>
+                                Don't have an account?  <a href="#">Sign Up </a>
                             </div>
 
                         </form>
