--- a/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Add.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@model NmyBlog.Model.Blog
-<blockquote class="layui-elem-quote">添加博客 - 纳米源</blockquote>
+<blockquote class="layui-elem-quote">添加博客</blockquote>
 <div style="padding: 10px">
 
     <form class="layui-form" method="post" action="">
