--- a/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Blog/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<NmyBlog.Model.Blog>
 
-<blockquote class="layui-elem-quote">博客管理 - 纳米源</blockquote>
+<blockquote class="layui-elem-quote">博客管理</blockquote>
 <div style="padding: 10px">
     <div>
         <a class="layui-btn" href="/Adnn1n/Blog/Add">
