--- a/NmyBlog.Web/Areas/Adnn1n/Views/Category/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<NmyBlog.Model.Category>
 
-<blockquote class="layui-elem-quote">标签管理 - 纳米源</blockquote>
+<blockquote class="layui-elem-quote">标签管理</blockquote>
 <div style="padding: 10px">
     <div>
         <a class="layui-btn" href="/Adnn1n/Category/Add">
