--- a/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Areas/Adnn1n/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                 <li class="menu-list">
                     <a href="#"><i class="icon-lock"></i> <span> 用户管理 </span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="/Adnn1n/Login" target="rightFrame"> 管理员管理 </a></li>
+                        <li><a href="/Adnn1n/Admin" target="rightFrame"> 管理员管理 </a></li>
                         <li><a href="/Adnn1n/Home/Welcome" target="rightFrame"> 权限管理 </a></li>
                     </ul>
                 </li>
@@ -95,7 +95,7 @@
                 <ul class="notification-menu">
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            Hugo
+                            @ViewBag.username
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
