session登录完成 依旧有bug

--- a/NmyBlog.Web/Views/Fof/Index.cshtml
+++ b/NmyBlog.Web/Views/Fof/Index.cshtml
@@ -13,7 +13,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>很抱歉，您要找的页面不存在 - 纳米源</title>
+    <title>很抱歉 您要找的页面不存在 - 纳米源</title>
     <meta name="keywords" content="nmyuan">
     <meta name="description" content="nmyuan">
     <meta name="author" content="weqan">
@@ -136,7 +136,7 @@
     <section class="container">
         <div class="panel">
             <div class="text-center">
-                <h2><stong>404错误！很抱歉，您要找的页面不存在</stong></h2>
+                <h2><stong>404错误！很抱歉，您要找的页面不存在 </stong></h2>
                 <div class="padding-big">
                     <a href="/Home" class="btn btn-primary">返回首页</a>
                 </div>
