--- a/NmyBlog.Web/Views/List/Index.cshtml
+++ b/NmyBlog.Web/Views/List/Index.cshtml
@@ -73,8 +73,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a data-cont="纳米源" title="纳米源" href="/Home">首页</a></li>
                         <li><a data-cont="我的文章" title="我的文章" href="/List">我的文章</a></li>
-                        <li><a data-cont="源码分享" title="源码分享" href="#">源码分享</a></li>
-                        <li><a data-cont="资讯分享" title="资讯分享" href="#">资讯分享</a></li>
+                        <li><a data-cont="源码分享" title="源码分享" href="/fof">源码分享</a></li>
+                        <li><a data-cont="资讯分享" title="资讯分享" href="/fof">资讯分享</a></li>
                     </ul>
                 </div>
             </div>
