--- a/NmyBlog.Web/Views/Fof/Index.cshtml
+++ b/NmyBlog.Web/Views/Fof/Index.cshtml
@@ -125,8 +125,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a data-cont="纳米源" title="纳米源" href="/Home">首页</a></li>
                         <li><a data-cont="我的文章" title="我的文章" href="/List">我的文章</a></li>
-                        <li><a data-cont="源码分享" title="源码分享" href="#">源码分享</a></li>
-                        <li><a data-cont="资讯分享" title="资讯分享" href="#">资讯分享</a></li>
+                        <li><a data-cont="源码分享" title="源码分享" href="/fof">源码分享</a></li>
+                        <li><a data-cont="资讯分享" title="资讯分享" href="/fof">资讯分享</a></li>
                     </ul>
                 </div>
             </div>
@@ -136,7 +136,7 @@
     <section class="container">
         <div class="panel">
             <div class="text-center">
-                <h2><stong>404错误！很抱歉，您要找的页面不存在 </stong></h2>
+                <h2><stong>很抱歉，您要找的页面正在建设中(●ˇ∀ˇ●) </stong></h2>
                 <div class="padding-big">
                     <a href="/Home" class="btn btn-primary">返回首页</a>
                 </div>
