2019年4月17日 缺分页 首页天数

--- a/NmyBlog.Web/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Views/Home/Index.cshtml
@@ -191,7 +191,7 @@
                                 日志总数: @ViewBag.blogcounts 篇
                             </h2>
                             <h2>
-                                网站运行:@ViewBag.rundays 天
+                                网站运行:@*@ViewBag.rundays*@ 29 天
                                 <span id="sitetime"></span>
                             </h2>
                         </div>
